// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player when ControlsBar is hidden it renders correctly 1`] = `
<div
  className="css-rn2qmu"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
>
  <video
    height={480}
    onClick={[Function]}
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    src={null}
  />
</div>
`;

exports[`Player when is playing it renders correctly 1`] = `
<div
  className="css-1i901l3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
>
  <video
    height={480}
    onClick={[Function]}
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    src={null}
  />
  <div
    className="css-ahjn9t"
  >
    <div
      className="css-1tbhals"
    >
      <input
        className="css-19h4nxv"
        max={0}
        onChange={[Function]}
        size="0.2em"
        step="any"
        type="range"
        value={0}
      />
      <div
        className="css-1voc2x1"
      />
    </div>
    <div
      className="css-12alag6"
    >
      <span
        className="css-bcxn3o"
        onClick={[Function]}
      >
        <svg
          className="css-gt3xp3"
          color="hsla(0, 0%, 100%, 0.8)"
          height="1.2em"
          viewBox="0 0 24 24"
          width="1.2em"
        >
          <path
            d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="css-1g6ztab"
      >
        00:00:00 / 00:00:00
      </span>
    </div>
  </div>
</div>
`;

exports[`Player without props it renders correctly 1`] = `
<div
  className="css-1i901l3"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onMouseMove={[Function]}
>
  <video
    height={480}
    onClick={[Function]}
    onLoadedMetadata={[Function]}
    onTimeUpdate={[Function]}
    src={null}
  />
  <div
    className="css-ahjn9t"
  >
    <div
      className="css-1tbhals"
    >
      <input
        className="css-19h4nxv"
        max={0}
        onChange={[Function]}
        size="0.2em"
        step="any"
        type="range"
        value={0}
      />
      <div
        className="css-1voc2x1"
      />
    </div>
    <div
      className="css-12alag6"
    >
      <span
        className="css-bcxn3o"
        onClick={[Function]}
      >
        <svg
          className="css-gt3xp3"
          color="hsla(0, 0%, 100%, 0.8)"
          height="1.2em"
          viewBox="0 0 24 24"
          width="1.2em"
        >
          <path
            d="M8 5v14l11-7z"
          />
          <path
            d="M0 0h24v24H0z"
            fill="none"
          />
        </svg>
      </span>
      <span
        className="css-1g6ztab"
      >
        00:00:00 / 00:00:00
      </span>
    </div>
  </div>
</div>
`;
